# AutomationEngineeringPortfolio

./: .gitignore  README.md
01.CLI Toolkit/: README.md  debug.html  pyproject.toml
01.CLI Toolkit/automation/cli/: main.py
01.CLI Toolkit/automation/core/: discovery_result.py  param_runtime.py  result.py  task_contract.py  task_introspection.py  task_loader.py  task_registry.py  task_runner.py  task_validator.py
01.CLI Toolkit/automation/external_tasks/: api_aggregator.py  data_inspector.py  excel_kpi.py  mini_etl.py  pdf_processor.py  pipeline_runner.py  risk_kpi.py  scheduler_worker.py  web_automation.py
01.CLI Toolkit/automation/tasks/: csvkpi.py  dirinventory.py
01.CLI Toolkit/automation/utils/: debug_logger.py  excel_writer.py  param_parser.py  path_resolver.py  paths.py  run_history.py  run_metadata.py
01.CLI Toolkit/configs/cookies/: drift_hq.json  idealo.json
01.CLI Toolkit/configs/mappings/: bringatrailer.toml  drift_hq_exhaust.toml  drift_hq_multi.toml  (+6 more)
01.CLI Toolkit/docs/: CHATGPT_CONTEXT.md  CLI_GRAMMER.md  CODEX_CONTEXT.md  EXTERNAL_TASKS.md  PROJECT_CONTEXT.md  SESSION_STATE.md  TASK_CONTRACT.md  TASK_DISCOVERY.md
03.Mini ETL Pipeline Engine/: mapping.toml  pyproject.toml
03.Mini ETL Pipeline Engine/mini_etl/: extractors.py  loaders.py  pipeline.py  task.py  transformer.py
08.Data Monitoring System/: pyproject.toml
08.Data Monitoring System/data_inspector/: evaluator.py  loader.py  rules.py  task.py
10.Risk KPI Automation Engine/: pyproject.toml
10.Risk KPI Automation Engine/risk_kpi/: evaluator.py  loader.py  rules.py  task.py
(+43 files in other folders)
